# ImageProcessor

./: CMakeLists.txt  README.md
src/: app.cpp
src/core/: color.cpp  color.h  image.cpp  image.h  processor.cpp  processor.h
src/filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.cpp  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h  twirl_distortion.cpp  twirl_distortion.h
src/io/: reader.cpp  reader.h  writer.cpp  writer.h
